# web-scan-pro

./: crawler.py  main.py  pyproject.toml  report_template.html  sqlitester.py  xss.py
reports/: report_20251001_174547.html  report_20251001_174758.html
security_scanner/: access_control.py  authentication.py  crawler.py  main.py  reporter.py  sqlitester.py  xss.py
