# pyproject.toml
[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-scanner"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A security vulnerability scanner with reporting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4",
    "jinja2",
    "weasyprint",  # For PDF generation
]

[project.scripts]
security-scanner = "security_scanner.main:main"